<resources>
    <string name="dmx_tool" translatable="false">DMX-Tool</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="dmx_standard" translatable="false">0</string>
    <string name="minus16" translatable="false">-16</string>
    <string name="plus16" translatable="false">+16</string>
    <string name="string_analyse" translatable="false">Analysetools</string>
    <string name="contact" translatable="false">chemnitzsued.veranstaltungen@gmail.com</string>
    <string name="dbViewNormalString" translatable="false">still no data</string>
    <string name="app_name">Analysis</string>
    <string name="tab_text_2">Main</string>
    <string name="tab_text_3">Radio</string>
    <string name="dmx_title">DMX Calculator</string>
    <string name="hello_blank_fragment">in dev</string>
    <string name="dip_switch_text">Dip switch</string>
    <string name="coming_soon">in dev</string>
    <string name="welcome_text">If you have problems by using this app or found some issues, please contact us. Thank you!</string>
    <string name="welcome_titel">Welcome</string>
    <string name="recordText">record</string>
    <string name="createText">create</string>
    <string name="joinText">join</string>
    <string name="joinMsg">you will be connected..</string>
    <string name="noConnection">No connection.</string>
    <string name="createdRoom">created channel.</string>
    <string name="connceted">connceted.</string>
    <string name="msgCenter">Messages</string>
    <string name="fail">issue</string>
    <string name="help">help</string>
    <string name="ready">ready</string>
    <string name="passwordQuestion">Do you want to secure youre channel with a password?</string>
    <string name="oscilloscope">spectrogram</string>
    <string name="bw_toggle">black/white</string>
    <string name="no_cam_perm">no permissions for using the camera. Maybe a restart can bring succes.</string>
    <string name="Audioanalyse">Audioanalysis</string>
    <string name="sound">acoustics</string>
    <string name="audioanalyseText" translatable="false">Hilfreiche Werkzeuge für die Audioanalyse inklusive Spektrogramm.</string>
    <string name="comunication">communication</string>
    <string name="light">light</string>
    <string name="copyright" translatable="false">Copyright © ~ Sören Dominik Kruck</string>
    <string name="no_mic_permission">You did not agreed the|microphone permissions</string>
    <string name="audio_analys_title">sound analysis</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam.</string>
    <string name="outdated1">Sorry, you can\'t use this function because</string>
    <string name="outdated2">of your outdated android version.</string>
    <string name="tools_title" translatable="false">Tools</string>
    <string name="veranstaltungstools">Event tools</string>
    <string name="version">version</string>
</resources>
