<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020.  ChemnitzSued Veranstaltungen
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/mainAnalyseCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:contentPadding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tmp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/oscilloscope" />

                    <!--
                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/realTimeChart"
                        android:layout_width="match_parent"
                        android:layout_height="256dp"
                        android:layout_marginTop="16dp">
                        </com.github.mikephil.charting.charts.LineChart>
                    -->

                    <!-- Spektrogramm-->
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="312dp"
                        android:layout_margin="8dp">

                        <de.doerte.veranstaltungstools.Spectrogram.Spectrogram
                            android:id="@+id/spectrogram"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:colored="true" />
                    </androidx.cardview.widget.CardView>

                    <Switch
                        android:id="@+id/bw_toggle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:checked="true"
                        android:text="@string/bw_toggle" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView18"
                        style="@style/Widget.MaterialComponents.TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_titel"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_text" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="16dp" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="email"
                        android:text="@string/contact"
                        android:textColor="#0277BD"
                        android:textColorLink="@color/secondaryColor" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="8dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</FrameLayout>