<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020.  ChemnitzSued Veranstaltungen
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:backgroundTintMode="src_in"
        android:theme="@style/VToolsTheme.NoActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:cropToPadding="false"
                android:foregroundTint="#FFFFFF"
                android:foregroundTintMode="multiply"
                android:tint="#FFFFFF"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/audio_analys_title"
                android:textColor="@color/secondaryTextColor"
                android:textSize="30sp" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <LinearLayout
            android:id="@+id/margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/mainAnalyseCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/spectrTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/oscilloscope" />

                    <de.doerte.veranstaltungstools.Spectrogram.Spectrogram
                        android:id="@+id/spectrogram"
                        android:layout_width="match_parent"
                        android:layout_height="256dp"
                        app:colored="true" />

                    <Switch
                        android:id="@+id/bw_toggle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:checked="true"
                        android:text="@string/bw_toggle" />

                    <!--
                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/realTimeChart"
                        android:layout_width="match_parent"
                        android:layout_height="256dp"
                        android:layout_marginTop="16dp">
                        </com.github.mikephil.charting.charts.LineChart>
                    -->

                    <!-- Spektrogramm-->

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>